Adjust nojournal startup warning to be more compelling

XMLWordPrintableJSON

    • Fully Compatible
    • v4.2, v4.0, v3.6
    • Execution Team 2019-12-16
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The current warning reads:

        • WARNING: This replica set is running without journaling enabled but the
        • writeConcernMajorityJournalDefault option to the replica set config
        • is set to true. The writeConcernMajorityJournalDefault
        • option to the replica set config must be set to false
        • or w:majority write concerns will never complete.

      While the consequence mentioned is true, we should also indicate that, regardless of w:majority writes, memory usage on both mmapv1 and WiredTiger will increase to the point of eventual node failure.

            Assignee:
            Eric Milkie
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: