SERVER-44796 adjust nojournal startup warning to be more compelling