src/mongo/db/repl/replication_coordinator_impl.cpp
@@ -3266,7 +3266,7 @@ ReplicationCoordinatorImpl::_setCurrentRSConfig(WithLock lk,
         (newConfig.getWriteConcernMajorityShouldJournal() &&
          (!oldConfig.isInitialized() || !oldConfig.getWriteConcernMajorityShouldJournal()))) {
         log() << startupWarningsLog;
-        log() << "** WARNING: This replica set is running without journaling enabled but the "
+        log() << "** WARNING: This replica set node is running without journaling enabled but the "
               << startupWarningsLog;
         log() << "**          writeConcernMajorityJournalDefault option to the replica set config "
               << startupWarningsLog;
@@ -3276,6 +3276,9 @@ ReplicationCoordinatorImpl::_setCurrentRSConfig(WithLock lk,
               << startupWarningsLog;
         log() << "**          or w:majority write concerns will never complete."
               << startupWarningsLog;
+        log() << "**          In addition, this node's memory consumption may increase until all"
+              << startupWarningsLog;
+        log() << "**          available free RAM is exhausted." << startupWarningsLog;
         log() << startupWarningsLog;
     }
 
@@ -3285,14 +3288,18 @@ ReplicationCoordinatorImpl::_setCurrentRSConfig(WithLock lk,
         (newConfig.getWriteConcernMajorityShouldJournal() &&
          (!oldConfig.isInitialized() || !oldConfig.getWriteConcernMajorityShouldJournal()))) {
         log() << startupWarningsLog;
-        log() << "** WARNING: This replica set is using in-memory (ephemeral) storage with the "
+        log() << "** WARNING: This replica set node is using in-memory (ephemeral) storage with the"
               << startupWarningsLog;
         log() << "**          writeConcernMajorityJournalDefault option to the replica set config "
               << startupWarningsLog;
         log() << "**          set to true. The writeConcernMajorityJournalDefault option to the "
               << startupWarningsLog;
-        log() << "**          replica set config is unsupported while using in-memory storage."
+        log() << "**          replica set config must be set to false " << startupWarningsLog;
+        log() << "**          or w:majority write concerns will never complete."
               << startupWarningsLog;
+        log() << "**          In addition, this node's memory consumption may increase until all"
+              << startupWarningsLog;
+        log() << "**          available free RAM is exhausted." << startupWarningsLog;
         log() << startupWarningsLog;
     }
 
